# himiko_c

./: .gitignore  CMakeLists.txt  README.md  config.example.json
fuzz/: fuzz_config.c  fuzz_duration.c  fuzz_math.c  fuzz_mentions.c  fuzz_text.c
fuzz/corpus/config/: valid.json
fuzz/corpus/duration/: 1h30m.txt  complex.txt
fuzz/corpus/mentions/: channel.txt  role.txt  user.txt  user_nick.txt
fuzz/corpus/text/: special.txt
include/: bot.h  config.h  database.h  debug.h  updater.h
include/audio/: audio_stream.h  discord_voice_internal.h  voice_udp.h
include/commands/: admin.h  ai.h  fun.h  images.h  info.h  lookup.h  music.h  random.h  settings.h  text.h  tools.h  utility.h  xp.h
include/modules/: antiraid.h  antispam.h  auto_cleaner.h  logging.h  mention_response.h  spam_filter.h  terminal.h  ticket.h
src/: bot.c  config.c  database.c  debug.c  main.c  updater.c
src/audio/: audio_stream.c  voice_udp.c
src/commands/: admin.c  ai.c  fun.c  images.c  info.c  lookup.c  music.c  random.c  settings.c  text.c  tools.c  utility.c  xp.c
src/modules/: antiraid.c  antispam.c  auto_cleaner.c  logging.c  mention_response.c  spam_filter.c  terminal.c  ticket.c
